fix: timeline-item-content alignment

--- a/wren-ui/src/styles/components/button.less
+++ b/wren-ui/src/styles/components/button.less
@@ -1,7 +1,9 @@
 .ant-btn {
   align-items: center;
+  gap: 4px;
   display: flex;
 }
+
 .adm-btn-no-style {
   cursor: pointer;
   background: transparent;
@@ -22,6 +24,7 @@
   border-color: @citrus-6;
   color: @citrus-6;
   background-color: @citrus-1;
+
   &:hover,
   &:focus {
     background-color: @citrus-1;
